--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 /* Style the navigation menu */
 #quiz {
     text-align: center;
